--- a/codex-processes-ap2-tools/pom.xml
+++ b/codex-processes-ap2-tools/pom.xml
@@ -2,17 +2,17 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>codex-processes-tools</artifactId>
+    <artifactId>codex-processes-ap2-tools</artifactId>
     <packaging>pom</packaging>
 
     <parent>
         <groupId>de.netzwerk-universitaetsmedizin.codex</groupId>
-        <artifactId>codex-processes</artifactId>
+        <artifactId>codex-processes-ap2</artifactId>
         <version>0.1.0-SNAPSHOT</version>
     </parent>
 
     <modules>
-        <module>codex-processes-test-data-generator</module>
+        <module>codex-processes-ap2-test-data-generator</module>
     </modules>
 
     <name>CODEX Processes Tools</name>
