Provide Pre-Built Docker Images
Provides pre-built docker images for the FHIR and
BPE part with necessary JARs already included.
Containers can be configured using environment
variables.

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,6 @@
 /codex-processes-ap2-tools/codex-processes-ap2-test-data-generator/cert/*.txt
 /codex-processes-ap2-tools/codex-processes-ap2-test-data-generator/config/*.properties
 /codex-processes-ap2-tools/codex-processes-ap2-test-data-generator/target/
+
+/docker/bpe/plugin/*.jar
+/docker/bpe/process/*.jar
