--- a/codex-processes-ap2-docker-test-setup/docker-compose.yml
+++ b/codex-processes-ap2-docker-test-setup/docker-compose.yml
@@ -37,7 +37,7 @@ services:
     - zars-fhir-app
 
   zars-fhir-app:
-    image: highmed/fhir
+    image: ghcr.io/highmed/fhir:0.5.0-m1
     restart: on-failure
     volumes:
     - type: bind
@@ -79,7 +79,7 @@ services:
 
   # ---- ZARS - BPE -----------------------------------------------------------
   zars-bpe-app:
-    image: highmed/bpe
+    image: ghcr.io/highmed/bpe:0.5.0-m1
     restart: on-failure
     volumes:
     - type: bind
@@ -153,7 +153,7 @@ services:
     - dic-1-fhir-app
 
   dic-1-fhir-app:
-    image: highmed/fhir
+    image: ghcr.io/highmed/fhir:0.5.0-m1
     restart: on-failure
     volumes:
     - type: bind
@@ -193,7 +193,7 @@ services:
 
   # ---- DIC-1 - BPE ----------------------------------------------------------
   dic-1-bpe-app:
-    image: highmed/bpe
+    image: ghcr.io/highmed/bpe:0.5.0-m1
     restart: on-failure
     volumes:
     - type: bind
@@ -284,7 +284,7 @@ services:
     - dic-2-fhir-app
 
   dic-2-fhir-app:
-    image: highmed/fhir
+    image: ghcr.io/highmed/fhir:0.5.0-m1
     restart: on-failure
     volumes:
     - type: bind
@@ -324,7 +324,7 @@ services:
 
   # ---- DIC-2 - BPE ----------------------------------------------------------
   dic-2-bpe-app:
-    image: highmed/bpe
+    image: ghcr.io/highmed/bpe:0.5.0-m1
     restart: on-failure
     volumes:
     - type: bind
