--- a/codex-processes-ap2-docker-test-setup/dic-1/bpe/app/conf/config.properties
+++ b/codex-processes-ap2-docker-test-setup/dic-1/bpe/app/conf/config.properties
@@ -49,4 +49,4 @@ org.highmed.dsf.bpe.fhir.task.subscription.lastEventTimeFile=last_event/time.fil
 #org.highmed.dsf.bpe.process.excluded=
 #org.highmed.dsf.bpe.process.retired=
 #org.highmed.dsf.bpe.process_plugin_directroy=process
-de.netzwerk_universitaetsmedizin.codex.processes.feasibility.store.url=http://dic-1-store:8080/fhir
+de.netzwerk_universitaetsmedizin.codex.processes.feasibility.store.url=http://dic-1-store:5000/
