Incorporate Evaluation Settings to BPE Image

--- a/docker/bpe/Dockerfile
+++ b/docker/bpe/Dockerfile
@@ -20,5 +20,6 @@ ENV WEBSERVICE_READ_TIMEOUT=20000
 ENV WEBSERVICE_CONNECT_TIMEOUT=2000
 ENV WEBSERVICE_REMOTE_READ_TIMEOUT=20000
 ENV WEBSERVICE_REMOTE_CONNECT_TIMEOUT=2000
+ENV FLARE_CONNECT_TIMEOUT=2000
 
 ENTRYPOINT ["./start.sh"]
