--- a/codex-process-feasibility/pom.xml
+++ b/codex-process-feasibility/pom.xml
@@ -35,6 +35,7 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>de.hs-heilbronn.mi</groupId>
