Incorporate Obfuscation Settings into BPE Image

--- a/docker/bpe/app/conf/config.properties
+++ b/docker/bpe/app/conf/config.properties
@@ -22,6 +22,7 @@ org.highmed.dsf.bpe.fhir.local.websocket.keystore.password=<WEBSOCKET_P12_CERTIF
 org.highmed.dsf.bpe.fhir.task.subscription.searchParameter=?criteria=Task%3Fstatus%3Drequested&status=active&type=websocket&payload=application/fhir%2Bjson
 org.highmed.dsf.bpe.fhir.task.subscription.lastEventTimeFile=last_event/time.file
 de.netzwerk_universitaetsmedizin.codex.processes.feasibility.evaluation.strategy=<PROCESS_EVALUATION_STRATEGY>
+de.netzwerk_universitaetsmedizin.codex.processes.feasibility.evaluation.obfuscate=<PROCESS_EVALUATION_OBFUSCATE>
 de.netzwerk_universitaetsmedizin.codex.processes.feasibility.store.url=<PROCESS_STORE_URL>
 de.netzwerk_universitaetsmedizin.codex.processes.feasibility.flare.webservice.baseUrl=<FLARE_BASE_URL>
 de.netzwerk_universitaetsmedizin.codex.processes.feasibility.flare.webservice.connectTimeout=<FLARE_CONNECT_TIMEOUT>
