Disable Obfuscation for Internal Test Setup

--- a/codex-processes-ap2-docker-test-setup/dic-1/bpe/app/conf/config.properties
+++ b/codex-processes-ap2-docker-test-setup/dic-1/bpe/app/conf/config.properties
@@ -50,5 +50,6 @@ org.highmed.dsf.bpe.fhir.task.subscription.lastEventTimeFile=last_event/time.fil
 #org.highmed.dsf.bpe.process.retired=
 #org.highmed.dsf.bpe.process_plugin_directroy=process
 de.netzwerk_universitaetsmedizin.codex.processes.feasibility.evaluation.strategy=structured-query
+de.netzwerk_universitaetsmedizin.codex.processes.feasibility.evaluation.obfuscate=false
 de.netzwerk_universitaetsmedizin.codex.processes.feasibility.flare.webservice.baseUrl=http://dic-1-store:5000/
 de.netzwerk_universitaetsmedizin.codex.processes.feasibility.flare.webservice.connectTimeout=2000
