--- a/codex-processes-ap2-docker-test-setup/dic-2/bpe/app/conf/config.properties
+++ b/codex-processes-ap2-docker-test-setup/dic-2/bpe/app/conf/config.properties
@@ -50,4 +50,5 @@ org.highmed.dsf.bpe.fhir.task.subscription.lastEventTimeFile=last_event/time.fil
 #org.highmed.dsf.bpe.process.retired=
 #org.highmed.dsf.bpe.process_plugin_directroy=process
 de.netzwerk_universitaetsmedizin.codex.processes.feasibility.evaluation.strategy=cql
+de.netzwerk_universitaetsmedizin.codex.processes.feasibility.evaluation.obfuscate=false
 de.netzwerk_universitaetsmedizin.codex.processes.feasibility.store.url=http://dic-2-store:8080/fhir
