Align Docker Test Setup With DSF 0.5.0

--- a/.gitignore
+++ b/.gitignore
@@ -3,47 +3,38 @@
 /codex-processes-ap2-docker-test-setup/certs/*.pem
 /codex-processes-ap2-docker-test-setup/certs/*.p12
 
-/codex-processes-ap2-docker-test-setup/dic-1/bpe/app/conf/*.p12
-/codex-processes-ap2-docker-test-setup/dic-1/bpe/app/last_event/time.file
-/codex-processes-ap2-docker-test-setup/dic-1/bpe/app/log/*.log
-/codex-processes-ap2-docker-test-setup/dic-1/bpe/app/log/*.log.gz
-/codex-processes-ap2-docker-test-setup/dic-1/bpe/app/plugin/*.jar
-/codex-processes-ap2-docker-test-setup/dic-1/bpe/app/process/*.jar
-/codex-processes-ap2-docker-test-setup/dic-1/bpe/proxy/ssl/*.pem
-/codex-processes-ap2-docker-test-setup/dic-1/fhir/app/conf/bundle.xml
-/codex-processes-ap2-docker-test-setup/dic-1/fhir/app/conf/config.properties
-/codex-processes-ap2-docker-test-setup/dic-1/fhir/app/conf/*.p12
-/codex-processes-ap2-docker-test-setup/dic-1/fhir/app/log/*.log
-/codex-processes-ap2-docker-test-setup/dic-1/fhir/app/log/*.log.gz
-/codex-processes-ap2-docker-test-setup/dic-1/fhir/proxy/ssl/*.pem
+/codex-processes-ap2-docker-test-setup/.env
+/codex-processes-ap2-docker-test-setup/secrets/*.pem
 
-/codex-processes-ap2-docker-test-setup/dic-2/bpe/app/conf/*.p12
-/codex-processes-ap2-docker-test-setup/dic-2/bpe/app/last_event/time.file
-/codex-processes-ap2-docker-test-setup/dic-2/bpe/app/log/*.log
-/codex-processes-ap2-docker-test-setup/dic-2/bpe/app/log/*.log.gz
-/codex-processes-ap2-docker-test-setup/dic-2/bpe/app/plugin/*.jar
-/codex-processes-ap2-docker-test-setup/dic-2/bpe/app/process/*.jar
-/codex-processes-ap2-docker-test-setup/dic-2/bpe/proxy/ssl/*.pem
-/codex-processes-ap2-docker-test-setup/dic-2/fhir/app/conf/bundle.xml
-/codex-processes-ap2-docker-test-setup/dic-2/fhir/app/conf/config.properties
-/codex-processes-ap2-docker-test-setup/dic-2/fhir/app/conf/*.p12
-/codex-processes-ap2-docker-test-setup/dic-2/fhir/app/log/*.log
-/codex-processes-ap2-docker-test-setup/dic-2/fhir/app/log/*.log.gz
-/codex-processes-ap2-docker-test-setup/dic-2/fhir/proxy/ssl/*.pem
+/codex-processes-ap2-docker-test-setup/dic-1/bpe/last_event/time.file
+/codex-processes-ap2-docker-test-setup/dic-1/bpe/log/*.log
+/codex-processes-ap2-docker-test-setup/dic-1/bpe/log/*.log.gz
+/codex-processes-ap2-docker-test-setup/dic-1/bpe/plugin/*.jar
+/codex-processes-ap2-docker-test-setup/dic-1/bpe/process/*.jar
+/codex-processes-ap2-docker-test-setup/dic-1/fhir/conf/bundle.xml
+/codex-processes-ap2-docker-test-setup/dic-1/fhir/conf/config.properties
+/codex-processes-ap2-docker-test-setup/dic-1/fhir/log/*.log
+/codex-processes-ap2-docker-test-setup/dic-1/fhir/log/*.log.gz
 
-/codex-processes-ap2-docker-test-setup/zars/bpe/app/conf/*.p12
-/codex-processes-ap2-docker-test-setup/zars/bpe/app/last_event/time.file
-/codex-processes-ap2-docker-test-setup/zars/bpe/app/log/*.log
-/codex-processes-ap2-docker-test-setup/zars/bpe/app/log/*.log.gz
-/codex-processes-ap2-docker-test-setup/zars/bpe/app/plugin/*.jar
-/codex-processes-ap2-docker-test-setup/zars/bpe/app/process/*.jar
-/codex-processes-ap2-docker-test-setup/zars/bpe/proxy/ssl/*.pem
-/codex-processes-ap2-docker-test-setup/zars/fhir/app/conf/bundle.xml
-/codex-processes-ap2-docker-test-setup/zars/fhir/app/conf/config.properties
-/codex-processes-ap2-docker-test-setup/zars/fhir/app/conf/*.p12
-/codex-processes-ap2-docker-test-setup/zars/fhir/app/log/*.log
-/codex-processes-ap2-docker-test-setup/zars/fhir/app/log/*.log.gz
-/codex-processes-ap2-docker-test-setup/zars/fhir/proxy/ssl/*.pem
+/codex-processes-ap2-docker-test-setup/dic-2/bpe/last_event/time.file
+/codex-processes-ap2-docker-test-setup/dic-2/bpe/log/*.log
+/codex-processes-ap2-docker-test-setup/dic-2/bpe/log/*.log.gz
+/codex-processes-ap2-docker-test-setup/dic-2/bpe/plugin/*.jar
+/codex-processes-ap2-docker-test-setup/dic-2/bpe/process/*.jar
+/codex-processes-ap2-docker-test-setup/dic-2/fhir/conf/bundle.xml
+/codex-processes-ap2-docker-test-setup/dic-2/fhir/conf/config.properties
+/codex-processes-ap2-docker-test-setup/dic-2/fhir/log/*.log
+/codex-processes-ap2-docker-test-setup/dic-2/fhir/log/*.log.gz
+
+/codex-processes-ap2-docker-test-setup/zars/bpe/last_event/time.file
+/codex-processes-ap2-docker-test-setup/zars/bpe/log/*.log
+/codex-processes-ap2-docker-test-setup/zars/bpe/log/*.log.gz
+/codex-processes-ap2-docker-test-setup/zars/bpe/plugin/*.jar
+/codex-processes-ap2-docker-test-setup/zars/bpe/process/*.jar
+/codex-processes-ap2-docker-test-setup/zars/fhir/conf/bundle.xml
+/codex-processes-ap2-docker-test-setup/zars/fhir/conf/config.properties
+/codex-processes-ap2-docker-test-setup/zars/fhir/log/*.log
+/codex-processes-ap2-docker-test-setup/zars/fhir/log/*.log.gz
 
 /codex-processes-ap2-tools/codex-processes-ap2-test-data-generator/bundle/*.xml
 /codex-processes-ap2-tools/codex-processes-ap2-test-data-generator/cert/*/
